Bug 527018 - [refactoring] Replace use of Number constructors by valueOf
Bump micro version for 4.8

Change-Id: Ib0bee17c6905c38cab7d4701f6339bfd63d9c45e
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>