@@ -40,7 +40,7 @@ public class ConfirmMergedOperation extends CVSSubscriberOperation {
 	 */
 	protected String getJobName() {
 		SyncInfoSet syncSet = getSyncInfoSet();
-		return NLS.bind(CVSUIMessages.SubscriberConfirmMergedAction_jobName, new String[] { new Integer(syncSet.size()).toString() }); 
+		return NLS.bind(CVSUIMessages.SubscriberConfirmMergedAction_jobName, new String[] { Integer.valueOf(syncSet.size()).toString() }); 
 	}
 	
 	/* (non-Javadoc)
