@@ -69,7 +69,7 @@ public class FuzzFactorDialog extends Dialog {
 		valueText.addModifyListener(e -> validateInput());
 		fuzzFactor = patcher.getFuzz();
 		if (fuzzFactor >= 0)
-			valueText.setText(new Integer(fuzzFactor).toString());
+			valueText.setText(Integer.valueOf(fuzzFactor).toString());
 
 		Button guessButton = new Button(composite, SWT.NONE);
 		guessButton.setText(TeamUIMessages.FuzzFactorDialog_guess);
@@ -84,7 +84,7 @@ public class FuzzFactorDialog extends Dialog {
 				patcher.setFuzz(-1);
 				int fuzz = guessFuzzFactor();
 				if (fuzz >= 0) {
-					String value = new Integer(fuzz).toString();
+					String value = Integer.valueOf(fuzz).toString();
 					valueText.setText(value);
 				}
 			}
